.. -*- coding: utf-8 -*-

==================
 Docutils History
==================

:Author: David Goodger; open to all Docutils developers
:Contact: goodger@python.org
:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::


Changes Since 0.7
=================

* General:

  - Handle language codes according to BCP 47.

* tools/buildhtml.py:

  - Fix ``--local`` switch.

* docutils/writers/xetex/__init__.py

  - New writer generating LaTeX code for compiling with ``xelatex``.
  
    A separate writer (inheriting from latex2e) instead of a ``--xetex``
    option allows separate config options for XeTeX vs. LaTeX2e.

* docutils/writers/latex2e/__init__.py

  - Fix [ 3043986 ] AttributeError using :local: with table of content.
  - Place title data in the document preamble.
  - Load `babel` package only if required.
  - Update list of supported languages.
  - New config setting "hyperref-options".
    No hard-coded "unicode" hyperref option (clash with xetex).

* tools/editors/emacs/rst.el:

  - Fix [ 3001100 ] does not handle spaces in filenames
    (thanks to Jakub Wilk)

* docutils/utils.py:

  - strip whitespace from stylesheet arguments


Release 0.7 (2010-07-07)
========================

* General:

  - Fix [ 2881769 ] setup configuration.
  - Fix [ 2788716 ] reporting problems in included files.

* docutils/io.py

  - FileInput opens files as text files with universal newline support
    (mode "rU", configurable with the new optional argument "mode").

* docutils/nodes.py

  - Fix [ 2975987 ] repr(Text) failed with long string (Jeffrey C. Jacobs).

* docutils/utils.py

  - Fix [ 2923723 ] let decode_path() tolerate path == None

* docutils/writers/html4css1/__init__.py

  - Support SVG and SWF images (thanks to Stefan Rank).
  - Generate valid XHTML for centered images with targets.
    Use CSS classes instead of "align" tags for image alignment.
